# rs-png2pnm

./: Cargo.toml  README.md  build-wasi.sh  rs-png2pnm  rs-png2pnm.wasm  run.sh
src/: lib.rs  main.rs
